--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-body{
-  background-image: url('/img/Rectangle.svg');
-  background-repeat: no-repeat;
-  object-fit: fill;
+.altura{
+  max-height: 375;
+  align-self: center;
 }
